--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "dependencies": {
     "react": "^16.5.1",
     "react-dom": "^16.5.1",
-    "react-scripts": "1.1.5"
+    "react-drag-drop-container": "^6.1.1",
+    "react-scripts": "1.1.5",
+    "shortid": "^2.2.13"
   },
   "scripts": {
     "start": "react-scripts start",
