--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "firebase": "^5.5.0",
     "react": "^16.5.1",
     "react-dom": "^16.5.1",
     "react-drag-drop-container": "^6.1.1",
+    "react-firebase-file-uploader": "^2.4.2",
     "react-scripts": "1.1.5",
     "shortid": "^2.2.13"
   },
