--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
     "react-dom": "^16.5.1",
     "react-drag-drop-container": "^6.1.1",
     "react-firebase-file-uploader": "^2.4.2",
-    "react-scripts": "1.1.5",
-    "shortid": "^2.2.13"
+    "react-scripts": "1.1.5"
   },
   "scripts": {
     "start": "react-scripts start",
